// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabStopsFailedInstancePanel render with failure instance action type CREATE 1`] = `
<DocumentFragment>
  <mock-failedinstancepanel
    confirmbuttontext="Add failed instance"
    headertext="Add a failed instance for some name for requirement"
    instancedescription="some description"
    isopen="true"
  />
</DocumentFragment>
`;

exports[`TabStopsFailedInstancePanel render with failure instance action type EDIT 1`] = `
<DocumentFragment>
  <mock-failedinstancepanel
    confirmbuttontext="Save"
    headertext="Edit failed instance for some name for requirement"
    instancedescription="some description"
    isopen="true"
  />
</DocumentFragment>
`;

exports[`TabStopsFailedInstancePanel render with no selected requirement id 1`] = `<DocumentFragment />`;
